crates/jarl-cli/tests/integration/snapshots/integration__allow_dirty__dirty_git_repo_allow_dirty.snap
---
source: crates/jarl-cli/tests/integration/allow_dirty.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").arg(\"--allow-dirty\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --fix --allow-dirty
